# distributed-transcoder

./: .dockerignore  CMakeLists.txt  Dockerfile  README.md  gst-pipeline.sh
include/: mpi_conf.hpp  transcoder.hpp  worker_node.hpp
src/: controller_node.cpp  main.cpp  scatter_file.cpp  transcoder.cpp  worker_node.cpp
